--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    color: white;
+    background-color: #F5F5F5;
+}
+
+p {
+    color: black;
+}
