--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
     color: white;
     background-color: #F5F5F5;
+    font-family: "Inter Tight", sans-serif;
 }
 
 p {
